<resources>
    <string name="app_name">Resistencia</string>
    <string name="valor">V. RESISTENCIA</string>
    <string name="tol">TOLERANCIA</string>
    <string name="go">CALCULAR</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_5p">5%</string>

    <string name="_10p">10%</string>
    <string name="reset">REINICIAR</string>
</resources>
