<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fkevincastro.resistencia.MainActivity"
    android:orientation="vertical"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/resistencia"
            android:orientation="horizontal"
            android:layout_margin="1dp">


            <LinearLayout
                android:layout_width="142dp"
                android:layout_height="match_parent">


            </LinearLayout>

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bB1"
                    android:layout_width="20dp"
                    android:layout_height="105dp"
                    android:layout_gravity="center"
                    android:onClick="OnBanda1Clicked" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bB2"
                    android:layout_width="20dp"
                    android:layout_height="105dp"
                    android:layout_gravity="center"

                    android:onClick="OnBanda2Clicked" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bB3"
                    android:layout_width="20dp"
                    android:layout_height="105dp"
                    android:layout_gravity="center"

                    android:onClick="OnBanda3Clicked" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="12dp"
                android:layout_height="match_parent">


            </LinearLayout>

            <LinearLayout
                android:layout_width="62dp"
                android:layout_height="165dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bB4"
                    android:layout_width="20dp"
                    android:layout_height="130dp"


                    android:onClick="OnBanda4Clicked" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bC0"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/bC1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/maroon"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bC2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_2"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bC3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_3"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bC4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_4"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bC5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/lime"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_5"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bC6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_6"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bC7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/purple"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_7"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bC8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/darkgray"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_8"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bC9"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_9"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bC10"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/gold"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_5p"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bC11"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/silver"
                    android:onClick="OnColorButtomClicked"
                    android:text="@string/_10p"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="117dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tValR"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/gray"
                    android:shadowColor="@color/aquamarine"
                    android:textColor="@color/aquamarine"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tol"
                    android:textColor="@color/white"
                    android:textSize="20sp" />



                <TextView
                    android:id="@+id/tTol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:shadowColor="@color/aquamarine"
                    android:textColor="@color/aquamarine"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/bCalcular"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/gray"

                android:onClick="OnCalcularClicked"
                android:text="@string/go"
                android:textColor="@color/aquamarine"
                android:textSize="20sp" />




        </LinearLayout>

    </LinearLayout>




</LinearLayout>
